--- a/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.html
+++ b/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.html
@@ -44,14 +44,17 @@
     <label>{{ 'PasteImg' | translate }}</label>
   </div>
   <!-- 都道府県 -->
-  <label class="time-label">{{"SelectAnAreaCategory"|translate}}</label>
   <div class="area" *ngIf="row">
-    <select [(ngModel)]="row.areaId" (change)="onChange(true)">
-      <option *ngFor="let area of $area" [ngValue]="area.parentId">
-        {{ commonService.isValidJson(area.parentName, lang) }}
-      </option>
-    </select>
+    <div class='container'>
+      <select id="selectarea" name="selectarea" [(ngModel)]="row.areaId" (change)="onChange(true)">
+        <option *ngFor="let area of $area" [ngValue]="area.parentId">
+          {{ commonService.isValidJson(area.parentName, lang) }}
+        </option>
+      </select>
+    </div>
+    <label for="selectarea" class="time-label">{{"SelectAnAreaCategory"|translate}}</label>
   </div>
+  
   <!-- カテゴリー選択ボタン -->
   <!-- <button mat-stroked-button (click)="onClickAreaCategory()">
     {{ "SelectAnAreaCategory" | translate }}
