--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -10,7 +10,7 @@
       <div id="swImg"></div>
     </div>
     <div class='mapview'>
-      <button mat-button (click)="onClickMap()">マップ表示</button>
+      <button (click)="onClickMap()">マップ表示</button>
     </div>
   </div>
 
