--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -36,6 +36,9 @@ form {
       border-radius: 16px;
       color: #fff;
       text-align: center;
+      &:hover{
+        background-color: #898989;
+      }
     }
   }
 }
