--- a/src/app/pages/mypage-planlist/mypage-planlist.component.html
+++ b/src/app/pages/mypage-planlist/mypage-planlist.component.html
@@ -94,6 +94,9 @@
                 <button mat-flat-button class="edit-to-plan" (click)="onClickPlanCopy(row)">
                   {{ "CopyPlan" | translate }}
                 </button>
+                <button mat-flat-button class="edit-to-plan" (click)="onClickPreview(row)">
+                  {{ "Preview" | translate }}
+                </button>
               </mat-list-item>
             </mat-list>
 
