--- a/src/app/parts/comment-list-post-panel/comment-list-post-panel.component.html
+++ b/src/app/parts/comment-list-post-panel/comment-list-post-panel.component.html
@@ -87,7 +87,12 @@
                     <button mat-menu-item (click)="onClickReport(childItem)">{{ "ReportReview" | translate }}</button>
                   </mat-menu>
                 </div>
-                <div *ngIf="!childItem.isEdit">{{ childItem.contents }}</div>
+                <div *ngIf="!childItem.isEdit">
+                  {{ childItem.contents }}
+                  <button (click)="onClickThanks(childItem)" [ngStyle]="{'color' : (childItem.isThanks? 'red' : 'gray')}">
+                    <i class="material-icons">thumb_up</i>
+                  </button>
+                </div>
                 <div class="btnedit" *ngIf="!childItem.isEdit && objectId === childItem.objectId">
                   <button class="edit" mat-stroked-button (click)="childItem.isEdit = !childItem.isEdit">
                     {{ "Edit" | translate }}
@@ -124,6 +129,9 @@
               </mat-list-item>
             </mat-list>
             <div class="btnedit" *ngIf="!item.isReply && objectId !== item.objectId">
+              <button (click)="onClickThanks(item)" [ngStyle]="{'color' : (item.isThanks? 'red' : 'gray')}">
+                <i class="material-icons">thumb_up</i>
+              </button>
               <button
                 mat-stroked-button class="edit" (click)="item.isReply = !item.isReply;">
                 {{ "Reply" | translate }}
