--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -669,6 +669,13 @@ form {
           font-size: 16px;
         }
       }
+      .pcguide{
+        p{
+          color: #fff;
+          font-size: 16px;
+          text-align: center;
+        }
+      }
     }
   }
 
