--- a/src/app/parts/myplan-spot-edit-dialog/myplan-spot-edit-dialog.component.html
+++ b/src/app/parts/myplan-spot-edit-dialog/myplan-spot-edit-dialog.component.html
@@ -60,5 +60,6 @@
       </select>
     </div>
   </div>
+  <button type="button" mat-dialog-close="cancel" class="abscancel"></button>
 </div>
-<button type="button" mat-dialog-close="cancel" class="abscancel">{{"close"|translate}}</button>
+
