--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -289,7 +289,8 @@ $menu_line: 2px;
     margin-bottom: 10px;
 
     .imgsp {
-      width: 10vw;
+      width: 138px;
+      margin-top: 10px;
     }
   }
 }
