--- a/src/app/parts/google-spot-dialog/google-spot-dialog.component.html
+++ b/src/app/parts/google-spot-dialog/google-spot-dialog.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title *ngIf="data[1]">{{ "StartSearch" | translate }}<span>{{"Option"|translate}}</span></h2>
 <h2 mat-dialog-title *ngIf="!data[1]">{{ "EndSearch" | translate }}<span>{{"Option"|translate}}</span></h2>
 <mat-dialog-content>
-  <div>
+  <div class="caption">
     <span *ngIf="data[1]">{{ "StartEx" | translate }}</span>
     <span *ngIf="!data[1]">{{ "EndEx" | translate }}</span>
   </div>
