編集プレビュー切り替え時の不要なカーソル点滅を消す

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -583,6 +583,8 @@ $color-grn01: #81C5B4;
     width: 130px;
     background: #fff;
 
+    color: transparent;
+
     &.en {
       input[type="checkbox"] {
         &:checked+label {
