--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -477,7 +477,8 @@
       border-left: $color-gry07 solid 1px;
       border-right: $color-gry07 solid 1px;
       border-radius: 0 0 10px 10px;
-      height: 206px;
+      //height: 206px;
+      height: 223px;
 
       .bottom-view {
         // display: flex;
