--- a/src/app/parts/google-spot-dialog/google-spot-dialog.component.scss
+++ b/src/app/parts/google-spot-dialog/google-spot-dialog.component.scss
@@ -54,7 +54,7 @@
       .mapDiv {
         position: relative;
         .map {
-          height: 91vw;
+          height: 50vh;
         }
         .map-center-overlay {
           margin: 0;
